[project]
name = "nhp-ats-backup"
version = "0.1.0"
description = "Automated backup of NHP Azure Table Storage to blob"
requires-python = "==3.13"

dependencies = [
    "azure-functions==2.1.0",
    "azure-data-tables==12.7.0",
    "azure-storage-blob==12.30.0",
    "azure-identity==1.25.3",
    "python-dotenv==1.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.16",
    "ty==0.0.48",
    "ipdb==0.13.13",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
]

[tool.ruff.lint]
select = [
 "E", # pycodestyle errors (spacing, line length, etc.)
 "F", # pyflakes rules (undefined names, unused imports, etc.)
 "I", # isort rules (import ordering)
]

[tool.ruff]
line-length = 90

[tool.ty]
python-version = "3.13"

[tool.pytest.ini_options]
addopts = "-vv"
